--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "browser-js",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "description": "A sugar to handle your browser.",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/kud/browser-js.git"
+  },
+  "scripts": {
+    "postinstall": "ln -fs $(pwd)/index.js $(pwd)/tests/",
+    "server": "./node_modules/http-server/bin/http-server tests -o -p 8080"
   },
   "keywords": [
     "browser",
@@ -16,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/kud/browser-js/issues"
   },
-  "homepage": "http://mdwn.in/gh/kud/browser-js"
+  "homepage": "http://mdwn.in/gh/kud/browser-js",
+  "devDependencies": {
+    "http-server": "^0.8.0"
+  }
 }
